# raytracer

./: .gitignore  Background.hpp  Box.hpp  CMakeLists.txt  Camera.hpp  CheckerTexture.hpp  Common.hpp  ConstantTexture.hpp  Dielectric.hpp  DiffuseLight.hpp  File.hpp  Framebuffer.hpp  Geometry.hpp  Hitable.hpp  Lambertian.hpp  Material.hpp  Math.hpp  Metal.hpp  PixelRenderer.hpp  README.md  Random.hpp  Ray.hpp  Raytrace.hpp  RaytraceVisualizer.hpp  Raytracer.hpp  Rect.hpp  Renderer.hpp  Sampling.hpp  Scene.hpp  Sphere.hpp  Texture.hpp  Transform.hpp  Vec3.hpp  Viewer.hpp  Viewport.hpp  common.h  geometry.h  main.cpp  math.h  ray.h  (+3 more)
examples/: cornell_box.cpp  light.cpp  positionable_camera.cpp  raytrace.sh  roughness.cpp  simple_materials.cpp  simple_scene.cpp  simple_scene2.cpp  sphere_and_box.cpp  spheres_and_boxes.cpp  texture.cpp  weekend1.cpp
examples/viewer/: Makefile  viewer.cpp
gpu/: GpuBackendOpenGL.hpp
platform/: PlatformBackendGLFW.hpp
src/: Box.hpp  Camera.hpp  Debug.hpp  Dielectric.hpp  DiffuseLight.hpp  File.hpp  Framebuffer.hpp  Hitable.hpp  Image.hpp  Lambertian.hpp  Material.hpp  Math.hpp  Metal.hpp  Postprocess.hpp  Preview.hpp  Quat.hpp  Random.hpp  Ray.hpp  Raymarch.hpp  Raytrace.hpp  RaytraceVisualizer.hpp  Rect.hpp  Renderer.hpp  Sampling.hpp  Scene.hpp  Sphere.hpp  Transform.hpp  Vec3.hpp  Viewer.hpp  Viewport.hpp  raytracer.cpp
src/gpu/: GpuBackend.hpp  GpuBackendOpenGL.hpp
src/platform/: PlatformBackend.hpp
tests/: math.cpp  quat.cpp  ray.cpp  test.sh  transform.cpp  vec3.cpp
tools/: build.sh  clean.sh  raytrace.sh
